k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: nginx
  labels:
    env: dev
